[tool.poetry]
name = "bot-test"
version = "0.1.0"
description = ""
authors = ["Ivan Nedobezhkin <inedobezkin@gmail.com>"]
readme = "README.md"
packages = [{include = "bot_test"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.10.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
pyzbar = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
